Implemented the ODE parent class in header and source file. Also  removed _class from file names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(header-files)
 include_directories(source-files)
+include_directories(eigen)
 
 FILE(GLOB hHeaders *.h)
 FILE(GLOB cppSources *.cpp)
