Added filename as optional input to SetUp class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(header-files)
 include_directories(source-files)
+add_subdirectory(Google_tests)
 
 include_directories(eigen)
 
