adjusted file structure for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,12 @@ include_directories(source-files)
 add_subdirectory(Google_tests)
 
 include_directories(eigen)
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 file(GLOB SOURCES  ${PROJECT_SOURCE_DIR}/source-files/*.cpp)
 file(GLOB HEADERS  ${PROJECT_SOURCE_DIR}/header-files/*.h)
 
 
-add_executable(ODE main.cpp ${SOURCES} ${HEADERS})
+add_executable(ODE ${SOURCES} ${HEADERS})
+add_executable(Google_Tests_run testing_files/testing_main.cpp)
+target_link_libraries(Google_Tests_run gtest gtest_main)
